[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-toolbox"
version = "0.1.0"
description = "A collection of personal tools"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "typer",
    "pyyaml",
]

[project.scripts]
whousesgpu = "my_toolbox.utils.whousesgpu:main"
lsync = "my_toolbox.lsync.sync:app"
rgit = "my_toolbox.lsync.rgit:app"
run-docker = "my_toolbox.docker_dev.run_docker:main"
docker-exec = "my_toolbox.docker_dev.docker_exec:main"
list-ib-devices = "my_toolbox.utils.list_ib_devices:main"
bulk-sync = "my_toolbox.utils.bulk_sync:main"

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
where = ["src"]
include = ["my_toolbox*"]
