[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-toolbox"
version = "0.1.0"
description = "A collection of personal tools"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "typer",
    "pyyaml",
    "markdown",
    "pygments",
]

[project.scripts]
rgit = "my_toolbox.git.rgit:app"
list-ib-devices = "my_toolbox.utils.list_ib_devices:main"
bulk-sync = "my_toolbox.utils.bulk_sync:main"
sgl-run = "my_toolbox.sgl_run.launch:main"
fmt-sh = "my_toolbox.utils.fmt_sh:main"
reconfig-docker = "my_toolbox.docker_dev.reconfig_docker:main"
rgh = "my_toolbox.gh.rgh:app"
rgrip = "my_toolbox.grip.manager:app"
rdev = "my_toolbox.rdev.cli:app"
extract-claude-chat = "my_toolbox.utils.extract_claude_chat:app"
rdiff = "my_toolbox.rdiff.cli:app"

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
where = ["src"]
include = ["my_toolbox*"]

[tool.setuptools.package-data]
"my_toolbox.rdiff" = ["assets/*.js", "assets/*.css"]
